--- a/mod1_solution/assignment1-starter-code/index.html
+++ b/mod1_solution/assignment1-starter-code/index.html
@@ -27,7 +27,7 @@
                </button>
            </div>
            <div class="form-group message"
-                ng-style = {{color}}>
+                ng-style = "color">
                 {{message}}
            </div>
          </div>
